Correct alignment issues
Adjust alignment issues with the various body elements so that the flow between screen sizes is more smooth.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ html {
 }
 
 h1 {
-  border-bottom: .1em solid #f2f3f1;
+  border: .1em solid #f2f3f1;
+  border-style: dotted;
 }
 
 .weather {
